# incremental-contour-experiments

./: .gitignore  LOG_check_contour_algorithms-bk-2.txt  LOG_check_contour_algorithms-bk.txt  README.md
analysis-code/: gen_checkbox_pattern.py  gen_runtime_2.py  gen_runtime_by_batch.py  gen_runtime_chessboard_csv.py  gen_runtime_chessboard_csv_2.py  gen_runtime_csv.py  gen_runtime_icdar_test.py  gen_runtime_icdar_val.py  regex-vs.txt  run_gen_runtime_2.sh  run_gen_runtime_checkboard_2.sh  run_gen_runtime_checkboard_csv.sh  run_gen_runtime_checkboard_hash_csv.sh  run_gen_runtime_csv.sh  run_gen_runtime_hash_csv.sh  run_gen_runtime_icdar_test50.sh  run_gen_runtime_icdar_val.sh  run_gen_runtime_test50_120x68.sh  run_gen_runtime_test50_240x135.sh  run_gen_runtime_test50_480x270.sh  run_gen_runtime_test50_960x540.sh  run_gen_runtime_val_120x68.sh  run_gen_runtime_val_240x135.sh  run_gen_runtime_val_480x270.sh  run_gen_runtime_val_960x540.sh  run_tdata_test50.sh  run_tdata_val.sh  temp.py  tree_data.py
img/: Fig.17.pgm  (+3 more)
programs/: CMakeLists.txt  CMakeUserPresets.json  LOG_check_contour_algorithms.txt  check_contour_algorithms.cpp  conanfile.txt  end_slides_image.cpp  mtree_data.cpp  paint_contour.cpp  perf_contour_trace.cpp  perf_incr_contour.cpp  perf_incr_contour_hashmap.cpp  perf_incr_contour_red_black_tree.cpp  perf_non_incr_contour.cpp  perform_check_dataset.sh
programs/debug/: conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  graph_info.json
programs/img/: 2.pgm  3.pgm  Fig.5.pgm  output6.pgm  w2.pgm  w6.pgm
programs/include/contour/: nonincremental.hpp
(+225 files in other folders)
